src/main/default/objects/Contract/fields/DNBI__Commercial_Credit_Score_Percentiles__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Commercial_Credit_Score_Percentiles__c</fullName>
    <label>D&amp;B Delinquency Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>