src/main/default/objects/Contract/fields/DNBI__CommercialCreditScore__c.field-meta.xml
<CustomField>
    <fullName>DNBI__CommercialCreditScore__c</fullName>
    <label>D&amp;B Delinquency Score (Raw)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>