src/main/default/objects/Contract/fields/DNBI__D_B_Address__c.field-meta.xml
<CustomField>
    <fullName>DNBI__D_B_Address__c</fullName>
    <label>D&amp;B Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>