src/main/default/objects/Contract/fields/DNBI__D_B_Auto_Trigger_Status__c.field-meta.xml
<CustomField>
    <fullName>DNBI__D_B_Auto_Trigger_Status__c</fullName>
    <label>D&amp;B Auto Trigger Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>