src/main/default/objects/Contract/fields/DNBI__D_B_Country__c.field-meta.xml
<CustomField>
    <fullName>DNBI__D_B_Country__c</fullName>
    <label>D&amp;B Country/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>