src/main/default/objects/Contract/fields/DNBI__D_B_High_Credit__c.field-meta.xml
<CustomField>
    <fullName>DNBI__D_B_High_Credit__c</fullName>
    <label>D&amp;B High Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>