src/main/default/objects/Contract/fields/DNBI__D_B_State_Province__c.field-meta.xml
<CustomField>
    <fullName>DNBI__D_B_State_Province__c</fullName>
    <label>D&amp;B State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>