src/main/default/objects/Contract/fields/DNBI__D_B_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>DNBI__D_B_Zip_Postal_Code__c</fullName>
    <label>D&amp;B Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>