src/main/default/objects/Contract/fields/DNBI__DnB_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Application_ID__c</fullName>
    <label>D&amp;B Application ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>