src/main/default/objects/Contract/fields/DNBI__DnB_Application_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Application_Modified_Date__c</fullName>
    <label>Application Modified Date</label>
    <type>DateTime</type>
</CustomField>