src/main/default/objects/Contract/fields/DNBI__DnB_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Credit_Limit__c</fullName>
    <label>Recommended Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>