src/main/default/objects/Contract/fields/DNBI__DnB_Credit_Term_Status__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Credit_Term_Status__c</fullName>
    <label>Credit Terms</label>
    <length>30</length>
    <type>Text</type>
</CustomField>