src/main/default/objects/Contract/fields/DNBI__DnB_DUNS_NO__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_DUNS_NO__c</fullName>
    <label>D&amp;B DUNS Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>