src/main/default/objects/Contract/fields/DNBI__DnB_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>