src/main/default/objects/Contract/fields/DNBI__DnB_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Requested_Amount__c</fullName>
    <label>Credit Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>