src/main/default/objects/Contract/fields/DNBI__Employees__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Employees__c</fullName>
    <label>D&amp;B Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>