src/main/default/objects/Contract/fields/DNBI__Financial_Stress_Score__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Financial_Stress_Score__c</fullName>
    <label>D&amp;B Failure Score (Raw)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>