src/main/default/objects/Contract/fields/DNBI__Financial_Stress_Score_Class__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Financial_Stress_Score_Class__c</fullName>
    <label>D&amp;B Failure Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>