src/main/default/objects/Contract/fields/DNBI__Financial_Stress_Score_Percentile__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Financial_Stress_Score_Percentile__c</fullName>
    <label>D&amp;B Failure Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>