src/main/default/objects/Contract/fields/DNBI__PAYDEX__c.field-meta.xml
<CustomField>
    <fullName>DNBI__PAYDEX__c</fullName>
    <label>D&amp;B PAYDEX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>