src/main/default/objects/Contract/fields/DNBI__Primary_NAICS__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Primary_NAICS__c</fullName>
    <label>D&amp;B Primary NAICS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>