src/main/default/objects/Contract/fields/DNBI__Rating__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Rating__c</fullName>
    <label>D&amp;B Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>