src/main/default/objects/Contract/fields/DNBI__Viability_Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Viability_Company_Profile__c</fullName>
    <label>D&amp;B Viability - Company Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>