src/main/default/objects/Contract/fields/DNBI__Viability_Data_Depth_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Viability_Data_Depth_Indicator__c</fullName>
    <label>D&amp;B Viability - Data Depth Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>