src/main/default/objects/Contract/fields/DNBI__Viability_Portfolio_Comparison__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Viability_Portfolio_Comparison__c</fullName>
    <label>D&amp;B Viability - Portfolio Comparison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>