src/main/default/objects/Contract/fields/DNBI__Viability_Rating__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Viability_Rating__c</fullName>
    <label>D&amp;B Viability Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>