src/main/default/objects/Contract/fields/DNBI__Viability_Viability_Score__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Viability_Viability_Score__c</fullName>
    <label>D&amp;B Viability - Viability Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>