src/main/default/objects/Contract/fields/DNBI__Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Years_in_Business__c</fullName>
    <label>D&amp;B Years in Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>